# xyon

./: .gitignore  CHARTER.md  Cargo.toml  README.md
.github/workflows/: ci.yml
employee/: contract.ts  guard.ts  memory.md  package.json
reports/: README.md  hired-2026-07-15.json
src/: evidence.rs  keypair.rs  ledger.rs  main.rs
